about section is totally free of css

--- a/src/app/components/about/about.css
+++ b/src/app/components/about/about.css
@@ -1,4 +1,4 @@
-.about__container {
+/* .about__container {
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   column-gap: 4rem;
@@ -46,7 +46,7 @@
 
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
-@media screen and (max-width: 992px) {
+/* @media screen and (max-width: 992px) {
   .about__container {
     grid-template-columns: 1fr;
     row-gap: 2.5rem;
@@ -72,10 +72,10 @@
     padding: 0 5rem;
     margin-bottom: 2rem;
   }
-}
+} */
 
 /* For medium devices */
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   .about__info {
     grid-template-columns: repeat(3, 1fr);
   }
@@ -86,8 +86,8 @@
 }
 
 /* For small devices */
-@media screen and (max-width: 350px) {
+/* @media screen and (max-width: 350px) {
   .about__info {
     grid-template-columns: repeat(2, 1fr);
   }
-}
+}   */
